git organização model node

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -10651,7 +10651,7 @@ html, body, #root, .content {
 }
 
 body {
-  background: #f0f;
+  background: #f00;
 }
 
 body p, body label, body span, body a, body li {
