--- a/src/scss/settings/_oocss.scss
+++ b/src/scss/settings/_oocss.scss
@@ -45,3 +45,4 @@
 #HIDDEN                 { overflow: hidden; }
 #ANIMATE                { transition: .3s; }
 #SPACING                { letter-spacing:2px }
+#CENTER                 { text-align: center; }
