--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -55,8 +55,7 @@ body
         .left-sb, .settings, .sidebar, .content, .aside
         { height: $full-height; }
 
-        .left-sb .sidebar,
-        .content .aside
+        .sb-default
         {
             @extend #RIGHT, #NO-PADDING;
             background: $light-silver;
@@ -74,13 +73,28 @@ body
                 padding: 20px 0;
                 border-right: $silver 1px solid;
                 background: $light;
+
+                li
+                {
+                    @extend #POINTER; 
+                    color: $purple;
+                    font-size: 20px;
+                    margin-bottom: 25px;
+
+                    &:hover
+                    { color: $dark-purple; }
+                }
+
+                li.active
+                { color: $pink; }
             }
     
             .sidebar
             {
+                @extend #RELATIVE;
                 width: 350px;
-                left: 62px;
                 border-right: $dark-silver 1px solid;
+                padding-top: 105px;
             }
         }
         
@@ -97,5 +111,41 @@ body
                 border-left: $dark-silver 1px solid;
             }
         }
+
+        .teto
+        {
+            @extend #ABSOLUTE;
+            width: $full-width;
+            top: 0;
+
+            h3.title
+            {
+                @extend #LEFT, #CENTER;
+                width: $full-width; height: 55px;
+                background: $silver;
+                line-height: 55px;
+                color: $pink;
+                font-size: 12px;    font-weight: 600;
+            }
+
+            .search
+            {
+                @extend #LEFT;
+                width: $full-width; height: 50px;
+                background: $navy-silver;
+                padding: 10px;
+
+                input
+                {
+                    width: $full-width; height: 30px;
+                    border-radius: 7px; 
+                    background: $light;
+                    border: solid 1px $dark-silver;
+                    font-size: 11px;    font-weight: normal;
+                    color: $purple;
+                    padding: 0 10px;
+                }
+            }
+        }   
     }
 }
