--- a/src/scss/settings/_colors.scss
+++ b/src/scss/settings/_colors.scss
@@ -8,6 +8,8 @@ $silver:            #EEEEEE;
 $navy-silver:       #E5E5E5;
 $dark-silver:       #DEDEDE;
 $dark:              #E4E4E4;
+$concrete:          #999999;
+$dark-concrete:     #666666;
 
 // Colors Default
 $pink:              #EB3067;
