--- a/src/scss/settings/_oocss.scss
+++ b/src/scss/settings/_oocss.scss
@@ -46,3 +46,4 @@
 #ANIMATE                { transition: .3s; }
 #SPACING                { letter-spacing:2px }
 #CENTER                 { text-align: center; }
+#NO-BORDER              { border: none; }
