--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -100,6 +100,14 @@ body
                 {
                     @extend #OVERFLOW;
                     height: $full-height;
+
+                    li.newmsg
+                    {
+                        .select-all
+                        {
+                            @extend #RIGHT;
+                        }
+                    }
                 }
 
                 ul > li
@@ -143,6 +151,13 @@ body
                         font-size: 12px;    font-weight: normal;
                         color: $purple;
                         line-height: 40px;
+                    }
+
+                    p.msg
+                    {
+                        white-space: nowrap; 
+                        overflow: hidden;
+                        text-overflow: ellipsis;
                     }
                 }
 
@@ -211,6 +226,19 @@ body
 
                     p.channel
                     { color: $purple; }
+
+                    .checkbox
+                    {
+                        @extend #NO-PADDING, #LEFT;
+                        padding-right: 10px;
+                        margin-top: 12px;
+
+                        label
+                        {
+                            color: $purple;
+                            font-size: 12px;    font-weight: 400;
+                        }
+                    }
                 }
 
                 .tab-content
