--- a/src/scss/settings/_colors.scss
+++ b/src/scss/settings/_colors.scss
@@ -17,3 +17,4 @@ $purple:            #515067;
 $success:           #42CB13;
 $danger:            #EB3067;
 $dark-purple:       #213847;
+$yellow:            #EA9531;
